--- a/cvmfstech.tex
+++ b/cvmfstech.tex
@@ -12,6 +12,7 @@
 \providecommand{\cvmfs}{{\scshape CernVM-FS}}
 \providecommand{\redirfs}{{\scshape redirfs}}
 \providecommand{\autofs}{{\scshape autofs}}
+\providecommand{\nagios}{{\scshape Nagios}}
 \providecommand{\squid}{{\scshape Squid}}
 \providecommand{\fuse}{{\scshape Fuse}}
 \providecommand{\fusex}{{\scshape Fuse4X}}
