--- a/references.bib
+++ b/references.bib
@@ -1,4 +1,10 @@
 
+@book{nagios08,
+        Author = {Max Schubert and Derrick Bennett and Jonathan Gines and Andrew Hay and John Strand},
+        Publisher = {Syngress},
+        Title = {{Nagios} 3 Enterprise Network Monitoring},
+        Year = {2008}}
+
 @article{squid99,
         Author = {David Guerrero},
         Journal = {Linux Journal},
