--- a/references.bib
+++ b/references.bib
@@ -80,7 +80,7 @@
 @misc{aufs,
 	Author = {Junjiro R. Okajima},
 	Howpublished = {\url{http://aufs.sourceforge.net/}},
-	Title = {{Aufs - Advanced multi ayered Unification FileSystem}}}
+	Title = {{Aufs - Advanced multi layered Unification FileSystem}}}
 
 @article{parrot05,
 	Author = {Douglas Thain and Miron Livny},
