parameter list updated

--- a/packages.tex
+++ b/packages.tex
@@ -43,6 +43,7 @@
 % Tables
 %-------------
 \usepackage{tabularx}
+\usepackage{ltxtable}
 
 % Split a cell into multiple rows/columns 
 \usepackage{multicol}
