--- a/cvmfstech.tex
+++ b/cvmfstech.tex
@@ -10,6 +10,8 @@
 \providecommand{\cern}{{\scshape cern}}
 \providecommand{\cernvm}{{\scshape CernVM}}
 \providecommand{\cvmfs}{{\scshape CernVM-FS}}
+\providecommand{\leveldb}{{\scshape leveldb}}
+\providecommand{\sqlite}{{\scshape SQLite}}
 \providecommand{\redirfs}{{\scshape redirfs}}
 \providecommand{\autofs}{{\scshape autofs}}
 \providecommand{\nagios}{{\scshape Nagios}}
