--- a/references.bib
+++ b/references.bib
@@ -1,4 +1,66 @@
 
+@misc{leveldb,
+        Author = {Jeffrey Dean and Sanjay Ghemawat},
+        Howpublished = {\url{http://code.google.com/p/leveldb/}},
+        Title = {leveldb}}
+
+@techreport{rfc1950,
+        Author = {P. Deutsch and J-L. Gailly},
+        Date-Added = {2009-08-20 16:47:38 +0200},
+        Date-Modified = {2009-08-21 10:31:38 +0200},
+        Days = 15,
+        Institution = {Internet Engineering Task Force},
+        Keywords = {WP0},
+        Month = may,
+        Number = 1950,
+        Title = {{ZLIB Compressed Data Format Specification version 3.3}},
+        Type = {RFC},
+        Url = {http://www.rfc-editor.org/rfc/rfc1950.txt},
+        Year = 1996,
+        Bdsk-Url-1 = {http://www.rfc-editor.org/rfc/rfc1950.txt}}
+
+@techreport{rfc3174,
+        Author = {D. Eastlake 3rd and P. Jones},
+        Days = 15,
+        Institution = {Internet Engineering Task Force},
+        Month = sep,
+        Number = 3174,
+        Title = {{US Secure Hash Algorithm 1 (SHA1)}},
+        Type = {RFC},
+        Url = {http://www.rfc-editor.org/rfc/rfc3174.txt},
+        Year = 2001,
+        Bdsk-Url-1 = {http://www.rfc-editor.org/rfc/rfc3174.txt}}
+
+
+@techreport{rfc6151,
+	Author = {S. Turner and L. Chen},
+	Institution = {Internet Engineering Task Force},
+	Number = 6151,
+	Title = {{Updated Security Considerations for the MD5 Message-Digest and the HMAC-MD5 Algorithms}},
+	Type = {RFC},
+	Url = {http://www.rfc-editor.org/rfc/rfc6151.txt},
+	Year = {2011},
+	Month = March}
+
+@techreport{rfc1321,
+        Author = {R. Rivest},
+        Days = 15,
+        Institution = {Internet Engineering Task Force},
+        Month = apr,
+        Number = 1321,
+        Title = {{The MD5 Message-Digest Algorithm}},
+        Type = {RFC},
+        Url = {http://www.rfc-editor.org/rfc/rfc1321.txt},
+        Year = 1992,
+        Bdsk-Url-1 = {http://www.rfc-editor.org/rfc/rfc1321.txt}}
+
+@book{sqlite10,
+        Author = {Grant Allen and Mike Owens},
+        Edition = {2nd edition},
+        Publisher = {Apress},
+        Title = {The Definitive Guide to {SQLite}},
+        Year = {2010}}
+
 @book{nagios08,
         Author = {Max Schubert and Derrick Bennett and Jonathan Gines and Andrew Hay and John Strand},
         Publisher = {Syngress},
