--- a/cpt-quickstart.tex
+++ b/cpt-quickstart.tex
@@ -43,7 +43,7 @@ To install, proceed according to the following steps:
 \begin{verbatim}
   CVMFS_HTTP_PROXY="http://myproxy1:port|http://myproxy2:port"
 \end{verbatim}
-		For the syntax of more complex HTTP proxy settings, see Section~\ref{sct:proxies}.
+		For the syntax of more complex HTTP proxy settings, see Section~\ref{sct:config:network}.
 		Make sure your local Squid servers allow access to all the Stratum 1 web servers~\ref{sct:squid}.
 		For Cern repositories, the Stratum 1 web servers are listed in /etc/cvmfs/domain.d/cern.ch.conf.
 	\item[Step 5] Check if \cvmfs\ mounts the specified repositories by \texttt{cvmfs\_config probe}.
